value iteration on secret env

--- a/notebooks/00_test_dp_secrets.ipynb
+++ b/notebooks/00_test_dp_secrets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "08ed5a1d",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f71a2a80",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,8 @@
       "Policy iteration round 1 done\n",
       "Policy iteration round 2 done\n",
       "Policy iteration round 3 done\n",
-      "Policy converged after 3 rounds.\n",
+      "Policy iteration round 4 done\n",
+      "Policy converged after 4 rounds.\n",
       "=== SecretEnv1 ===\n",
       "Policy shape: (65536,)\n",
       "Value function (V) sample: [-2.4137991  0.         0.         0.         0.         0.\n",
@@ -69,10 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c93c06c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Policy iteration round 1 done\n",
+      "Policy iteration round 2 done\n",
+      "Policy iteration round 3 done\n",
+      "Policy iteration round 4 done\n",
+      "Policy converged after 4 rounds.\n",
+      "=== SecretEnv2 ===\n",
+      "Policy shape: (2097152,)\n",
+      "Value function (V) sample: [-5.21692064  0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "from envs.secret.secret_envs_wrapper import SecretEnv2\n",
     "from rl_algorithms.dp_algorithms_secret.policy_iteration import policy_iteration_blackbox\n",
@@ -89,7 +106,32 @@
    "execution_count": null,
    "id": "5f91134b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Policy iteration round 1 done\n",
+      "Policy iteration round 2 done\n",
+      "Policy iteration round 3 done\n",
+      "Policy iteration round 4 done\n",
+      "Policy iteration round 5 done\n",
+      "Policy iteration round 6 done\n",
+      "Policy iteration round 7 done\n",
+      "Policy iteration round 8 done\n",
+      "Policy iteration round 9 done\n",
+      "Policy iteration round 10 done\n",
+      "Policy iteration round 11 done\n",
+      "Policy iteration round 12 done\n",
+      "Policy iteration round 13 done\n",
+      "Policy iteration round 14 done\n",
+      "Policy iteration round 15 done\n",
+      "Policy iteration round 16 done\n",
+      "Policy iteration round 17 done\n",
+      "Policy iteration round 18 done\n"
+     ]
+    }
+   ],
    "source": [
     "from envs.secret.secret_envs_wrapper import SecretEnv3\n",
     "from rl_algorithms.dp_algorithms_secret.policy_iteration import policy_iteration_blackbox\n",
@@ -98,7 +140,7 @@
     "policy, V = policy_iteration_blackbox(env, gamma=0.99, num_episodes=5000, max_iterations=20, verbose=True)\n",
     "print(\"=== SecretEnv3 ===\")\n",
     "print(\"Policy shape:\", policy.shape)\n",
-    "print(\"Value function (V) sample:\", V[:10])\n"
+    "print(\"Value function (V) sample:\", V[:10])"
    ]
   }
  ],
