everysecret env implemented

--- a/notebooks/00_test_dp_secrets.ipynb
+++ b/notebooks/00_test_dp_secrets.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5f91134b",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,13 @@
       "Policy iteration round 15 done\n",
       "Policy iteration round 16 done\n",
       "Policy iteration round 17 done\n",
-      "Policy iteration round 18 done\n"
+      "Policy iteration round 18 done\n",
+      "Policy iteration round 19 done\n",
+      "Policy iteration round 20 done\n",
+      "=== SecretEnv3 ===\n",
+      "Policy shape: (65536,)\n",
+      "Value function (V) sample: [-2.67403779  0.          0.          0.          0.          0.\n",
+      "  0.          0.          0.          0.        ]\n"
      ]
     }
    ],
@@ -141,6 +147,85 @@
     "print(\"=== SecretEnv3 ===\")\n",
     "print(\"Policy shape:\", policy.shape)\n",
     "print(\"Value function (V) sample:\", V[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "59b20ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value iteration round 1 done\n",
+      "Value iteration round 2 done\n",
+      "Value iteration converged after 2 rounds.\n",
+      "Policy shape (env0): (8192,)\n",
+      "Value function (env0) sample: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from envs.secret.secret_envs_wrapper import SecretEnv0\n",
+    "from rl_algorithms.dp_algorithms_secret.value_iteration import value_iteration_blackbox\n",
+    "\n",
+    "env0 = SecretEnv0()\n",
+    "V0, policy0 = value_iteration_blackbox(env0, gamma=0.99, max_iterations=100, verbose=True)\n",
+    "print(\"Policy shape (env0):\", policy0.shape)\n",
+    "print(\"Value function (env0) sample:\", V0[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e1e3f597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value iteration round 1 done\n",
+      "Value iteration round 2 done\n",
+      "Value iteration converged after 2 rounds.\n",
+      "Policy shape (env1): (65536,)\n",
+      "Value function (env1) sample: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "env1 = SecretEnv1()\n",
+    "V1, policy1 = value_iteration_blackbox(env1, gamma=0.99, max_iterations=100, verbose=True)\n",
+    "print(\"Policy shape (env1):\", policy1.shape)\n",
+    "print(\"Value function (env1) sample:\", V1[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75885989",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env2 = SecretEnv2()\n",
+    "V2, policy2 = value_iteration_blackbox(env2, gamma=0.99, max_iterations=100, verbose=True)\n",
+    "print(\"Policy shape (env2):\", policy2.shape)\n",
+    "print(\"Value function (env2) sample:\", V2[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7959da83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env3 = SecretEnv3()\n",
+    "V3, policy3 = value_iteration_blackbox(env3, gamma=0.99, max_iterations=100, verbose=True)\n",
+    "print(\"Policy shape (env3):\", policy3.shape)\n",
+    "print(\"Value function (env3) sample:\", V3[:10])"
    ]
   }
  ],
