--- a/notebooks/test_qlearning_all_envs_moncef.ipynb
+++ b/notebooks/test_qlearning_all_envs_moncef.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "995be171",
    "metadata": {},
    "outputs": [
@@ -425,6 +425,17 @@
       "File \u001b[1;32mc:\\Users\\said_\\Desktop\\4IA_ReinforcementLearning\\visualizations\\rps.py:146\u001b[0m, in \u001b[0;36mvisualize_rps_policy\u001b[1;34m(env, policy, delay)\u001b[0m\n\u001b[0;32m    144\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m btn[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrect\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mcollidepoint(event\u001b[38;5;241m.\u001b[39mpos):\n\u001b[0;32m    145\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m btn[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNext\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m done:\n\u001b[1;32m--> 146\u001b[0m         \u001b[43madvance_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    147\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m btn[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReset\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    148\u001b[0m         state \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mreset()\n",
       "File \u001b[1;32mc:\\Users\\said_\\Desktop\\4IA_ReinforcementLearning\\visualizations\\rps.py:117\u001b[0m, in \u001b[0;36mvisualize_rps_policy.<locals>.advance_step\u001b[1;34m()\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m valid_actions:\n\u001b[0;32m    116\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m--> 117\u001b[0m action \u001b[38;5;241m=\u001b[39m policy[state] \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mstate\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpolicy\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m policy[state] \u001b[38;5;129;01min\u001b[39;00m valid_actions \u001b[38;5;28;01melse\u001b[39;00m valid_actions[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m    118\u001b[0m prev_state \u001b[38;5;241m=\u001b[39m state\n\u001b[0;32m    119\u001b[0m state, reward, finished \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(action)\n",
       "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (7,) (2,) "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
